MAIN/04 NETWORK SECURITY.tf
resource "azurerm_network_security_group" "ST-SECURITY" {
  name                = "ST-SECURITY"
  location            = azurerm_resource_group.ST-INFRA.location
  resource_group_name = azurerm_resource_group.ST-INFRA.name

   security_rule {
    name                       = "SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "Web"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
}
}
